# DIP

./: CMakeLists.txt
src/: CMakeLists.txt  types.h
src/colors/: rgb.cpp  rgb.h
test/: CMakeLists.txt  colors.tests.cpp  example.cpp  sample1_unit.cc
